force-app/main/default/objects/hed__Program_Enrollment__c/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <description>Campus Code</description>
    <inlineHelpText>Campus Code</inlineHelpText>
    <label>Campus</label>
    <length>2</length>
    <type>Text</type>
</CustomField>