force-app/main/default/objects/hed__Program_Enrollment__c/fields/Enrollment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Reference__c</fullName>
    <description>Full reference of the admission to the program: Term-Majr-Conc-Degree</description>
    <externalId>true</externalId>
    <inlineHelpText>Full reference of the admission to the program: Term-Majr-Conc-Degree</inlineHelpText>
    <label>Enrollment Reference</label>
    <length>120</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>