force-app/main/default/objects/hed__Program_Enrollment__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The term for this enrollment.</description>
    <inlineHelpText>The term for this enrollment.</inlineHelpText>
    <label>Term</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>